--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,21 @@
 .as__app {
   width: 100%;
   height: 100vh;
+  background: #F3F3F3;
+}
+
+.as__app-wrap {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+
+  h1 {
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+    line-height: 1.5;
+  }
 }
