--- a/src/components/UploadImg/UploadImg.scss
+++ b/src/components/UploadImg/UploadImg.scss
@@ -32,6 +32,7 @@
     margin-top: 30px;
     text-align: center;
     border: 1px dashed #19b566;
+    min-height: 100px;
     background-image: url(../../assets/img/transparent_bg.jpg);
 
     span {
